force-app/main/default/objects/Cost__c/fields/CostValue__c.field-meta.xml
<CustomField>
    <fullName>CostValue__c</fullName>
    <label>Cost Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>